# rcv1.3.13

./: -  .bandit  .bandit.bak  .coveragerc  .editorconfig  .env  .env.backup  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CHANGELOG_STORAGE_PREFIX.md  CI_LOCAL_FINAL_REPORT.md  CONTRIBUTING.md  DISK_ANALYSIS_REPORT.md  ENXUGAMENTO_V4_RELATORIO.txt  EXCLUSOES_SUGERIDAS.md  EXECUTIVE_SUMMARY.md  FASE_4B.3_RESUMO.md  FASE_4C_RESUMO.md  FAST_LOOP_CI_RESUMO.md  FixPack-05_SUMMARY.md  GATE_FINAL.md  Guia-apply-patch-windows-v1.0.14.md  INSTALACAO.md  INSTRUCOES_PR_E_RELEASE.md  LOGS_FINAL_POLICY.md  LOGS_IMPLEMENTACAO_RESUMO.md  LOGS_OPTIMIZATION.md  LOGS_V2_MINIMALISTA_SUMMARY.md  MEDIUM_PRIORITY_SUMMARY.md  MICROFASE_36_RELATORIO_FINAL.md  MIGRACAO_CTK_GUIA_COMPLETO.ipynb  NEXT_STEPS.md  PACKAGING_LAYOUT.md  PATCH_VALIDATION_REPORT.txt  PR14_REPORT.md  (+113 more)
.docs/: ARQUIVOS_COMPACTADOS.md  CHECKLIST_HOTFIX.md  HOTFIX_FILE_DIALOG.md  IMPLEMENTACAO_ZIP_RAR.md  VALIDACAO_ZIP_RAR.md
ajuda/: .env.example.template  ACABAMENTO_FINAL.md  AJUSTES_FINOS_UTF8.md  ARCH_RULES_FINAL.txt  ARCH_RULES_REPORT.txt  ARVORE.txt  AUDIT_MIN_REPORT.json  AUDIT_REPORT.json  AUDIT_V2_SUMMARY.md  AUDIT_V3_QUICKSTART.md  AUDIT_V3_SUMMARY.md  BEFORE_VS_AFTER.md  BLINDAGEM_CI_RELATORIO.md  CANONICOS.md  CHANGELOG.md  CHECKLIST.md  CLEANUP_ACTION_PLAN.md  CLEANUP_PLAN.json  CLEANUP_PLAN.md  CLEANUP_V3_ACTION_PLAN.md  CONSOLIDACAO-RESUMO.md  CONSOLIDACAO_RELATORIO_FINAL.md  DEPS-ANALYSIS.md  DEPS-QUICKSTART.md  DEPS_TREE.json  DEPS_TREE.txt  DEPTRY_BEFORE.txt  DEPTRY_REPORT.txt  DUPES_REPORT.json  DUPES_REPORT.md  ENTREGAVEIS.md  GUIA-COMMIT.md  HOTFIX-FONTE-TEAROFF.md  INDEX_AUDIT_V3.md  INDICE.md  INVENTARIO.csv  MELHORIAS_OPCIONAIS.md  PADRONIZACAO_UTF8_FINAL.md  POLIMENTO-VISUAL-GUIA.md  PROMPT-5-CHANGES.md  (+33 more)
application/: __init__.py  api.py  auth_controller.py  commands.py  keybindings.py  navigation_controller.py  status_monitor.py
config/: README.md  constants.py  openai_key.example.txt  paths.py
core/: __init__.py  logger.py  models.py
coverage_annotate/: z_f1b38b22aeb65474_text_utils.py,cover
data/: auth_bootstrap.py  domain_types.py  supabase_repo.py
detectors/: __init__.py  cnpj_card.py
docs/: ADVANCED_UPLOAD.md  ANALISE_DOMINIOS_LEGADO_ANVISA_AUDITORIA_SENHAS.md  ANALISE_INFRAESTRUTURA_SUBPASTAS_v1.5.99.md  ANVISA_UPLOAD_FEATURE.md  AUDITORIA_DIALOGOS_JANELAS_v1.6.22.md  AUDITORIA_MODULO_HUB_v1.6.22.md  AUDIT_ANTI_FLASH_v1.5.87.md  BATCH-17-RELATORIO.md  BATCH-17X-RELATORIO.md  BUILD.md  CLEANUP_REMOVAL_REPORT.md  CLEANUP_STATUS_FINAL.md  CLIENTES_SHIM_AUDIT.md  CLIENT_EDITOR_FLASH_FIX.md  CONSOLE_CLEANUP.md  CONSOLE_CLEANUP_RESUMO.md  CTK_IMPORT_POLICY.md  CTK_MIGRATION_PLAN.md  CTK_MIGRATION_SUMMARY.md  CTK_VALIDATION_GUIDE.md  CTK_VALIDATION_QUICKSTART.md  DARK_MODE_FLASH_FIX.md  DEADCODE-REPORT.md  DETERMINISTIC_PROGRESS.md  DEV-MAP.md  DIAGNOSTICO_MODULO_CLIENTES_v1.5.99.md  ENFORCEMENT_PATCH.md  ENFORCEMENT_SUMMARY.md  FASE3_ANALISE_FLUXOS_EXTERNOS.md  FASE_4B_DIAGNOSTICO_CRASH_v1.6.23.md  FASE_4D_FINAL.md  FASE_4D_RESUMO.md  FASE_4E_RELEASE_CLOSURE_v1.6.23.md  FASE_5A_PERF_STARTUP.md  FASE_5_RELEASE.md  FASE_6_RESUMO.md  FASE_7_QA_E2E_MONITORING.md  FINAL_PRUNE_REPORT.md  FIX_CLIENT_EDITOR_FLASH.md  FIX_EDIT_CLIENT_DIALOG_FLASH_AND_ICON.md  (+144 more)
exports/: README.md
gui/: __init__.py  hub_screen.py  main_screen.py  main_window.py  menu_bar.py  (+3 more)
(+2137 files in other folders)
